Add file structure and starter homepage content.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,48 @@
 </head>
 
 <body>
+	<header>
+		<h1>Peyton Chance</h1>
+		<nav>
+			<ul>
+				<li><a href="/work">Work</a></li>
+				<li><a href="/words">Words</a></li>
+				<li><a href="/approach">Approach</a></li>
+				<li><a href="/about">About</a></li>
+
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<h2>Welcome.</h2>
+		<p>Hi there. I'm a digital project manager and accessibility advocate working in DC.</p>
+		
+		<h2>Areas of Expertise</h2>
+		<ul>
+			<li>Digital Products</li>
+			<li>Web Accessibility</li>
+			<li>Quality Assurance</li>
+			<li>Delivery Management</li>
+		</ul>
+		
+		<h2>Select Clients</h2>
+		<p>These are just a handful of the clients I've worked with over the years.</p>
+		<ul>
+			<li>Human Rights Campaign</li>
+			<li>NFL Players Association</li>
+			<li>Project Beacon (COVID-19)</li>
+			<li>Arcadia</li>
+			<li>American Association of Chemistry Teachers</li>
+			<li>Project on Government Oversight</li>
+			<li>WireWheel</li>
+		</ul>
+		
+		<h2>Select Work</h2>
+		<a href="/work"></a>
+	</main>
+	<footer>
+		<p>Copyright Peyton Chance 2021.</p>
+	</footer>
 </body>
 
 </html>
