Sets up key page structures and starter homepage content.

--- a/index.html
+++ b/index.html
@@ -2,25 +2,42 @@
 
 <head>
 	<title>Peyton Chance | Portfolio</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Peyton Chance is a Washington, DC-based digital project manager and accessibility professional.">
+	
+	<!-- 
+		
+		Thanks for taking a peek under the hood. There's not much to see here, just good 'ole HTML, CSS, and JS. 
+		
+		I do get by with a little help from my friends, though. 
+		Here are the CodePen samples I pulled from in whipping
+		up this portfolio site:
+	
+	-->
+	<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+	<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
+	<a href="#maincontent" class="skip-to">Skip to main content</a>
 	<header>
-		<h1>Peyton Chance</h1>
+		<h1>
+			<a href="/"><img class="header-logo"" src="/assets/pc-logo.gif" alt="Peyton Chance | Portfolio"></a>
+		</h1>
 		<nav>
 			<ul>
 				<li><a href="/work">Work</a></li>
 				<li><a href="/words">Words</a></li>
-				<li><a href="/approach">Approach</a></li>
 				<li><a href="/about">About</a></li>
 
 			</ul>
 		</nav>
 	</header>
-	<main>
-		<h2>Welcome.</h2>
-		<p>Hi there. I'm a digital project manager and accessibility advocate working in DC.</p>
+	<main id="maincontent">
+		<h2>Hi there.</h2>
+		<p>I'm a digital project manager and accessibility advocate working in DC.</p>
+		<p>I'm currently working with the talented team at <a href="https://viget.com" target="_blank">Viget</a> to design, brand and build digital products for clients.</p>
 		
 		<h2>Areas of Expertise</h2>
 		<ul>
@@ -31,7 +48,7 @@
 		</ul>
 		
 		<h2>Select Clients</h2>
-		<p>These are just a handful of the clients I've worked with over the years.</p>
+		<p>These are just a handful of the clients I've worked with over the years. We've partnered together on everything from brand strategy to mobile app development.</p>
 		<ul>
 			<li>Human Rights Campaign</li>
 			<li>NFL Players Association</li>
@@ -43,7 +60,7 @@
 		</ul>
 		
 		<h2>Select Work</h2>
-		<a href="/work"></a>
+		<a href="/work">All Work</a>
 	</main>
 	<footer>
 		<p>Copyright Peyton Chance 2021.</p>
