--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/css/styles.css">
+	<meta charset="UTF-8">
 </head>
 
 <body>
@@ -30,40 +31,63 @@
 				<li><a href="/work">Work</a></li>
 				<li><a href="/words">Words</a></li>
 				<li><a href="/about">About</a></li>
-
 			</ul>
 		</nav>
 	</header>
 	<main id="maincontent">
-		<h2>Hi there.</h2>
-		<p>I'm a digital project manager and accessibility advocate working in DC.</p>
-		<p>I'm currently working with the talented team at <a href="https://viget.com" target="_blank">Viget</a> to design, brand and build digital products for clients.</p>
 		
-		<h2>Areas of Expertise</h2>
+		<div class="intro">
+			<!-- <img class="headshot" src="assets/Peyton-HQ-0244.jpg"> -->
+
+			<div class="intro-text">
+				<h2><span aria-hidden="true">&#128075;</span> Hey there, I'm Peyton.</h2>
+				<p>I'm a digital project manager and <abbr title="Accessibility">a11y</abbr> advocate based in Washington, DC. With a background in front-end development and multimedia journalism, I'm a hands-on leader of design and engineering engagements. My most-used phrases in Slack are "from an accessibility perspective", "good to go", and "thanks so much".</p>
+				<p>I'm currently working with the talented team at <a href="https://viget.com" target="_blank">Viget</a> to design, brand and build digital products for clients.</p>
+			</div>
+
+
+		</div>
+
+		
+
+		<!-- <h2>Areas of Expertise</h2>
 		<ul>
 			<li>Digital Products</li>
 			<li>Web Accessibility</li>
 			<li>Quality Assurance</li>
 			<li>Delivery Management</li>
-		</ul>
-		
-		<h2>Select Clients</h2>
-		<p>These are just a handful of the clients I've worked with over the years. We've partnered together on everything from brand strategy to mobile app development.</p>
-		<ul>
-			<li>Human Rights Campaign</li>
-			<li>NFL Players Association</li>
-			<li>Project Beacon (COVID-19)</li>
-			<li>Arcadia</li>
-			<li>American Association of Chemistry Teachers</li>
-			<li>Project on Government Oversight</li>
-			<li>WireWheel</li>
-		</ul>
-		
-		<h2>Select Work</h2>
-		<a href="/work">All Work</a>
+		</ul> -->
+		<div class="clients">
+			
+			<h2><span aria-hidden="true">&#128188;</span> Select Clients</h2>
+			<p>These are just a few of the clients I've worked with over the years. We've partnered together on everything from brand strategy to mobile app development.</p>
+			
+			<ul class="clients-list">
+				<li>
+					<a href="https://hrc.org" target="_blank" class="client-logo">
+						<img src="assets/HRC-logo.svg" alt="Human Rights Campaign">
+					  </a>
+				</li>
+				<li>
+					<a href="https://nflpa.com" target="_blank" class="client-logo">
+						<img src="assets/nflpa-logo.svg" alt="NFL Players Association">
+					  </a>
+				</li>
+				<li>
+					<a href="https://www.beacontesting.com/" target="_blank" class="client-logo">
+						<img src="assets/beacon-logo.svg" alt="Project Beacon COVID-19">
+					  </a>
+				</li>
+				<li>
+					<a href="https://www.arcadia.com/" target="_blank" class="client-logo">
+						<img src="assets/arcadia-logo.svg" alt="Arcadia">
+					  </a>
+				</li>
+			</ul>
+		</div>
 	</main>
 	<footer>
-		<p>Copyright Peyton Chance 2021.</p>
+		<p>Copyright Peyton Chance, 2021</p>
 	</footer>
 </body>
 
