Adds work index.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 			<!-- <img class="headshot" src="assets/Peyton-HQ-0244.jpg"> -->
 
 			<div class="intro-text">
-				<h2><span aria-hidden="true">&#128075;</span> Hey there, I'm Peyton.</h2>
-				<p>I'm a digital project manager and <abbr title="Accessibility">a11y</abbr> advocate based in Washington, DC. With a background in front-end development and multimedia journalism, I'm a hands-on leader of design and engineering engagements. My most-used phrases in Slack are "from an accessibility perspective", "good to go", and "thanks so much".</p>
+				<h2><span role="img" aria-label="Waving">&#128075;</span> Hey there, I'm Peyton.</h2>
+				<p>I'm a digital project manager and <abbr title="Accessibility">a11y</abbr> advocate based in Washington, DC. With a background in front-end development and multimedia journalism, I'm a hands-on leader of design and engineering engagements. My most-used phrases in Slack are "from an accessibility perspective", "good to go", and "I appreciate you".</p>
 				<p>I'm currently working with the talented team at <a href="https://viget.com" target="_blank">Viget</a> to design, brand and build digital products for clients.</p>
 			</div>
 
@@ -59,28 +59,28 @@
 		</ul> -->
 		<div class="clients">
 			
-			<h2><span aria-hidden="true">&#128188;</span> Select Clients</h2>
-			<p>These are just a few of the clients I've worked with over the years. We've partnered together on everything from brand strategy to mobile app development.</p>
+			<h2><span role="img" aria-label="Briefcase">&#128188;</span> Select Clients</h2>
+			<p>These are just a few of the clients I've worked with over the years. We've partnered together on everything from website redesigns, to content strategy, to mobile app development.</p>
 			
 			<ul class="clients-list">
 				<li>
 					<a href="https://hrc.org" target="_blank" class="client-logo">
-						<img src="assets/HRC-logo.svg" alt="Human Rights Campaign">
+						<img src="assets/HRC-logo.svg" loading="lazy" alt="Human Rights Campaign">
 					  </a>
 				</li>
 				<li>
 					<a href="https://nflpa.com" target="_blank" class="client-logo">
-						<img src="assets/nflpa-logo.svg" alt="NFL Players Association">
+						<img src="assets/nflpa-logo.svg" loading="lazy" alt="NFL Players Association">
 					  </a>
 				</li>
 				<li>
 					<a href="https://www.beacontesting.com/" target="_blank" class="client-logo">
-						<img src="assets/beacon-logo.svg" alt="Project Beacon COVID-19">
+						<img src="assets/beacon-logo.svg" loading="lazy" alt="Project Beacon COVID-19">
 					  </a>
 				</li>
 				<li>
 					<a href="https://www.arcadia.com/" target="_blank" class="client-logo">
-						<img src="assets/arcadia-logo.svg" alt="Arcadia">
+						<img src="assets/arcadia-logo.svg" loading="lazy" alt="Arcadia">
 					  </a>
 				</li>
 			</ul>
