Add About page content.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Peyton Chance is a Washington, DC-based digital project manager and accessibility professional.">
 	
-	<!-- 
-		
-		Thanks for taking a peek under the hood. There's not much to see here, just good 'ole HTML, CSS, and JS. 
-		
-		I do get by with a little help from my friends, though. 
-		Here are the CodePen samples I pulled from in whipping
-		up this portfolio site:
-	
-	-->
+	<!-- Thanks for taking a peek under the hood. There's not much to see here, just good 'ole HTML, CSS, and JS. -->
 	<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/css/styles.css">
