--- a/work/index.html
+++ b/work/index.html
@@ -1,7 +1,7 @@
 <html lang="en-us">
 
 <head>
-	<title>Peyton Chance | Portfolio</title>
+	<title> Work / Peyton Chance | Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Peyton Chance is a Washington, DC-based digital project manager and accessibility professional.">
 	
