Standardizes footer content across pages.

--- a/words/index.html
+++ b/words/index.html
@@ -50,6 +50,9 @@
                 </li>
             </ul>
         </main>
-
+        
+        <footer>
+            <p>Copyright Peyton Chance, 2021</p>
+        </footer>
     </body>
 </html>
