--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	
 	<!-- Thanks for taking a peek under the hood. There's not much to see here, just good 'ole HTML, CSS, and JS. -->
 	
-	<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;500;600&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" href="/css/styles.css">
 	<meta charset="UTF-8">
 </head>
