Swap project to product.

--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
 			<p>When working with clients and internal teams, I tell the truth – and I expect the same of others. I sleep best after sending a well-worded email, GitHub issue, project plan, or meeting recap.</p>
 
 			<h3>Hands-on collaboration.</h3>
-			<p>Project management isn’t just telling people what to do. Often, it’s doing the work alongside the team. In the last year, I've made <a href="https://github.com/peytonchance">677 GitHub contributions</a> (mostly tickets & simple PRs) and made countless design tweaks in <a href="https://figma.com">Figma</a>. I’m a digital generalist with a Google Calendar habit.</p>
+			<p>Product management isn’t just telling people what to do. Often, it’s doing the work alongside the team. In the last year, I've made <a href="https://github.com/peytonchance">677 GitHub contributions</a> (mostly tickets & simple PRs) and made countless design tweaks in <a href="https://figma.com">Figma</a>. I’m a digital generalist with a planning habit.</p>
 
 			<h3>Digital accessibility.</h3>
 			<p>I believe that the digital world is for all people - including those with physical, mental and economic barriers to access. Accessibility is an equity challenge that can only be met with knowledge. I’m a Certified Professional of Accessibility Core Competencies (CPACC) and I’m working toward a certification as a Web Accessibility Specialist. At Viget, I lead accessibility QA to WCAG 2.1 standards, and advocate for testing across device tiers.</p>
