--- a/index.html
+++ b/index.html
@@ -35,22 +35,13 @@
 
 			<div class="intro-text">
 				<h2><span role="img" aria-label="Waving">&#128075;</span> Hey there, I'm Peyton.</h2>
-				<p>I'm a digital project manager and <abbr title="Accessibility">a11y</abbr> advocate based in Washington, DC. With a background in front-end development and multimedia journalism, I'm a hands-on leader of design and engineering engagements. My most-used phrases in Slack are "from an accessibility perspective", "good to go", and "I appreciate you".</p>
+				<p>I'm a product manager and <abbr title="Accessibility">a11y</abbr> advocate based in Washington, DC. With a background in front-end development and multimedia journalism, I'm a hands-on leader of design and engineering engagements. My most-used phrases in Slack are "from an accessibility perspective", "good to go", and "I appreciate you".</p>
 				<p>I'm currently working with the talented team at <a href="https://viget.com" target="_blank">Viget</a> to design, brand and build digital products for clients.</p>
 			</div>
 
 
 		</div>
 
-		
-
-		<!-- <h2>Areas of Expertise</h2>
-		<ul>
-			<li>Digital Products</li>
-			<li>Web Accessibility</li>
-			<li>Quality Assurance</li>
-			<li>Delivery Management</li>
-		</ul> -->
 		<div class="clients">
 			
 			<h2><span role="img" aria-label="Briefcase">&#128188;</span> Select Clients</h2>
