2022 EOY site updates

--- a/about/index.html
+++ b/about/index.html
@@ -7,68 +7,80 @@
 		
 		<!-- Thanks for taking a peek under the hood. There's not much to see here, just good 'ole HTML, CSS, and JS. -->
 		
-		<link rel="preconnect" href="https://fonts.gstatic.com">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7HJ7N50M2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-Z7HJ7N50M2');
+        </script>
+        
+        <link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;500;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="/css/styles.css">
 		<meta charset="UTF-8">
 	</head>
 
-<body>
-	<a href="#maincontent" class="skip-to">Skip to main content</a>
-	<header>
-		<a href="/"><img responsive class="header-logo"" src="/assets/pc-logo.gif" alt="Peyton Chance | Portfolio"></a>
-		<nav>
-			<ul>
-				<li><a href="/work">Work</a></li>
-				<li><a href="/words">Words</a></li>
-				<li><a href="/about" class="active">About</a></li>
-			</ul>
-		</nav>
-	</header>
+    <body>
+        <a href="#maincontent" class="skip-to">Skip to main content</a>
+        <header>
+            <a href="/"><img responsive class="header-logo"" src="/assets/pc-logo.gif" alt="Peyton Chance | Portfolio"></a>
+            <nav>
+            <nav>
+                <ul>
+                    <li><a href="/work">Work</a></li>
+                    <li><a href="/words">Words</a></li>
+                    <li><a href="/about" class="active">About</a></li>
+                </ul>
+            </nav>
+        </header>
 
-	<main id="maincontent">
-		<h1>About</h1>
+        <main id="maincontent">
+            <h1>About</h1>
 
-		<div class="about-wrapper">
-			<h2><span role="img" aria-label="Bearded Man">&#129492;&#127995;</span> Bio</h2>
-			<p><strong>Organic, farm-raised human.</strong> With an interactive journalism degree, and three years of experience managing design, development, and product engagements, I bring my storytelling and engineering background to each project. I’m as comfortable discussing complex API integrations as I am editing impactful copywriting. I’m a Certified Professional of Accessibility Core Competencies (CPACC) and I work every day to make the web a more equitable place.</p>
-			<p>Originally from a soybean farm in Maryland, I now live and work in Washington, DC. At Viget, I lead digital engagements for clients like the Human Rights Campaign, Arcadia, and the NFL Players Association.</p>
-		</div>
+            <div class="about-wrapper">
+                <h2><span role="img" aria-label="Bearded Man">&#129492;&#127995;</span> Bio</h2>
+                <p><strong>Organic, farm-raised human.</strong> With an interactive journalism degree, and three years of experience managing design, development, and product engagements, I bring my storytelling and engineering background to each project. I’m as comfortable discussing complex API integrations as I am editing impactful copywriting. I’m a Certified Professional of Accessibility Core Competencies (CPACC) and I work every day to make the web a more equitable place.</p>
+                <p>Originally from a soybean farm in Maryland, I now live and work in Washington, DC. At Viget, I lead digital engagements for clients like the Human Rights Campaign, Arcadia, and the NFL Players Association.</p>
+            </div>
 
-		<div class="about-wrapper">
-			<h2><span role="img" aria-label="Heart">&#10084;&#65039;</span> Philosophy</h2>
-			<p>I believe in doing good, and doing it well.</p>
+            <div class="about-wrapper">
+                <h2><span role="img" aria-label="Heart">&#10084;&#65039;</span> Philosophy</h2>
+                <p>I believe in doing good, and doing it well.</p>
 
-			<h3>Clear, transparent communication.</h3>
-			<p>When working with clients and internal teams, I tell the truth – and I expect the same of others. I sleep best after sending a well-worded email, GitHub issue, project plan, or meeting recap.</p>
+                <h3>Clear, transparent communication.</h3>
+                <p>When working with clients and internal teams, I tell the truth – and I expect the same of others. I sleep best after sending a well-worded email, GitHub issue, project plan, or meeting recap.</p>
 
-			<h3>Hands-on collaboration.</h3>
-			<p>Product management isn’t just telling people what to do. Often, it’s doing the work alongside the team. In the last year, I've made <a href="https://github.com/peytonchance">677 GitHub contributions</a> (mostly tickets & simple PRs) and made countless design tweaks in <a href="https://figma.com">Figma</a>. I’m a digital generalist with a planning habit.</p>
+                <h3>Hands-on collaboration.</h3>
+                <p>Product management isn’t just telling people what to do. Often, it’s doing the work alongside the team. In the last year, I've made <a href="https://github.com/peytonchance">677 GitHub contributions</a> (mostly tickets & simple PRs) and made countless design tweaks in <a href="https://figma.com">Figma</a>. I’m a digital generalist with a planning habit.</p>
 
-			<h3>Digital accessibility.</h3>
-			<p>I believe that the digital world is for all people - including those with physical, mental and economic barriers to access. Accessibility is an equity challenge that can only be met with knowledge. I’m a Certified Professional of Accessibility Core Competencies (CPACC) and I’m working toward a certification as a Web Accessibility Specialist. At Viget, I lead accessibility QA to WCAG 2.1 standards, and advocate for testing across device tiers.</p>
+                <h3>Digital accessibility.</h3>
+                <p>I believe that the digital world is for all people - including those with physical, mental and economic barriers to access. Accessibility is an equity challenge that can only be met with knowledge. I’m a Certified Professional of Accessibility Core Competencies (CPACC) and I’m working toward a certification as a Web Accessibility Specialist. At Viget, I lead accessibility QA to WCAG 2.1 standards, and advocate for testing across device tiers.</p>
 
-			<h3>LGBTQIA+ inclusion.</h3>
-			<p>I care about making the world a better place for LGBTQIA+ people to live and work. Together with queer colleagues, I've worked to increase the visibility of LGBTQIA+ people at Viget and even led a <a href="https://docs.google.com/presentation/d/1Iyqw1zAFRm2TT5Tww6_fonv4CSZtWSj_BZ-nDi_p8Y8/edit?usp=sharing" target="_blank">lunch discussion on queer identity</a>.</p>
-		</div>
+                <h3>LGBTQIA+ inclusion.</h3>
+                <p>I care about making the world a better place for LGBTQIA+ people to live and work. Together with queer colleagues, I've worked to increase the visibility of LGBTQIA+ people at Viget and even led a <a href="https://docs.google.com/presentation/d/1Iyqw1zAFRm2TT5Tww6_fonv4CSZtWSj_BZ-nDi_p8Y8/edit?usp=sharing" target="_blank">lunch discussion on queer identity</a>.</p>
+            </div>
 
-		<div class="about-wrapper">
-			<h2><span role="img" aria-label="Chat bubble">&#128172;</span> Connect</h2>
-			<p>Call me, tweet me, if you wanna reach me.</p>
-			<dl>
-				<dt><span role="img" aria-label="Email">&#128231;</span> Email</dt>
-				<dd>peytonchance [at] gmail [dot] com</dd>
-				<dt><span role="img" aria-label="GitHub">&#128104;&#127995;&#8205;&#128187;</span> GitHub</dt>
-				<dd><a href="https://github.com/peytonchance" aria-label="Peyton Chance on GitHub">@peytonchance</a></dd>
-				<dt><span role="img" aria-label="Twitter"></span>&#128038;</span> Twitter</dt>
-				<dd><a href="https://twitter.com/peytonchance" aria-label="Peyton Chance on Twitter">@peytonchance</a></dd>
-				<dt><span role="img" aria-label="LinkedIn">&#128279;</span> LinkedIn</dt>
-				<dd><a href="https://linkedin.com/in/peytonchance" aria-label="Peyton Chance on LinkedIn">Peyton Chance</a></dd>
-			</dl>
-		</div>
-	</main>
-	
-	<footer>
-		<p>Copyright Peyton Chance, 2021</p>
-	</footer>
-</body>
+            <div class="about-wrapper">
+                <h2><span role="img" aria-label="Chat bubble">&#128172;</span> Connect</h2>
+                <p>Call me, tweet me, if you wanna reach me.</p>
+                <dl>
+                    <dt><span role="img" aria-label="Email">&#128231;</span> Email</dt>
+                    <dd>peytonchance [at] gmail [dot] com</dd>
+                    <dt><span role="img" aria-label="GitHub">&#128104;&#127995;&#8205;&#128187;</span> GitHub</dt>
+                    <dd><a href="https://github.com/peytonchance" aria-label="Peyton Chance on GitHub">@peytonchance</a></dd>
+                    <dt><span role="img" aria-label="Twitter"></span>&#128038;</span> Twitter</dt>
+                    <dd><a href="https://twitter.com/peytonchance" aria-label="Peyton Chance on Twitter">@peytonchance</a></dd>
+                    <dt><span role="img" aria-label="LinkedIn">&#128279;</span> LinkedIn</dt>
+                    <dd><a href="https://linkedin.com/in/peytonchance" aria-label="Peyton Chance on LinkedIn">Peyton Chance</a></dd>
+                </dl>
+            </div>
+        </main>
+        
+        <footer>
+            <p>Copyright Peyton Chance, <script>document.write(new Date().getFullYear());</script></p>
+        </footer>
+    </body>
+</html>
