--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	<meta name="description" content="Peyton Chance is a Washington, DC-based digital project manager and accessibility professional.">
 	
 	<!-- Thanks for taking a peek under the hood. There's not much to see here, just good 'ole HTML, CSS, and JS. -->
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7HJ7N50M2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Z7HJ7N50M2');
+    </script>
 	
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -35,8 +45,8 @@
 
 			<div class="intro-text">
 				<h2><span role="img" aria-label="Waving">&#128075;</span> Hey there, I'm Peyton.</h2>
-				<p>I'm a product manager and <abbr title="Accessibility">a11y</abbr> advocate based in Washington, DC. With a background in front-end development and multimedia journalism, I'm a hands-on leader of design and engineering engagements. My most-used phrases in Slack are "from an accessibility perspective", "good to go", and "I appreciate you".</p>
-				<p>I'm currently working with the talented team at <a href="https://viget.com" target="_blank">Viget</a> to design, brand and build digital products for clients.</p>
+				<p>I'm a product manager and <abbr title="Accessibility">a11y</abbr> advocate based in Washington, DC. With a background in front-end development and multimedia journalism, I'm a hands-on leader of cross-functional product teams. My most-used phrases in Slack are "from an accessibility perspective", "good to go", and "I appreciate you".</p>
+				<p>I'm currently working with the talented team at <a href="https://youneedabudget.com" target="_blank"><abbr title="You Need A Budget">YNAB</abbr></a> to help people change their relationship with money and love how they spend it.</p>
 			</div>
 
 
@@ -45,7 +55,7 @@
 		<div class="clients">
 			
 			<h2><span role="img" aria-label="Briefcase">&#128188;</span> Select Clients</h2>
-			<p>These are just a few of the clients I've worked with over the years. We've partnered together on everything from website redesigns, to content strategy, to mobile app development.</p>
+			<p>In a past life, I worked with <a href="https://viget.com">Viget</a> clients on everything from website redesigns, to content strategy, to mobile app development.</p>
 			
 			<ul class="clients-list">
 				<li>
@@ -73,7 +83,7 @@
 	</main>
 	
 	<footer>
-		<p>Copyright Peyton Chance, 2021</p>
+		<p>Copyright Peyton Chance, <script>document.write(new Date().getFullYear());</script></p>
 	</footer>
 </body>
 
