--- a/work/index.html
+++ b/work/index.html
@@ -7,7 +7,17 @@
 	
 	<!-- Thanks for taking a peek under the hood. There's not much to see here, just good 'ole HTML, CSS, and JS. -->
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7HJ7N50M2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Z7HJ7N50M2');
+    </script>
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;500;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -35,9 +45,6 @@
 		<p>In each, I collaborated with a team of talented designers, engineers, and copywriters to plan, execute, QA, and launch digital products.</p>
 			
 		<p>Over the last three years, I've partnered with non-profit and private sector clients to launch software advocating for LGBTQ+ equality, increasing access to COVID-19 testing and vaccination information, and connecting everyday people to clean energy.</p>
-	
-		<p>Case studies coming soon!</p>
-
 
 		<ul class="work-list">
 			<li>
@@ -98,9 +105,9 @@
 		</ul>
 	</main>
 	
-	<footer>
-		<p>Copyright Peyton Chance, 2021</p>
-	</footer>
+        <footer>
+            <p>Copyright Peyton Chance, <script>document.write(new Date().getFullYear());</script></p>
+        </footer>
 </body>
 
 </html>
