About Page 2022 EOY updates

--- a/about/index.html
+++ b/about/index.html
@@ -42,8 +42,8 @@
 
             <div class="about-wrapper">
                 <h2><span role="img" aria-label="Bearded Man">&#129492;&#127995;</span> Bio</h2>
-                <p><strong>Organic, farm-raised human.</strong> With an interactive journalism degree, and three years of experience managing design, development, and product engagements, I bring my storytelling and engineering background to each project. I’m as comfortable discussing complex API integrations as I am editing impactful copywriting. I’m a Certified Professional of Accessibility Core Competencies (CPACC) and I work every day to make the web a more equitable place.</p>
-                <p>Originally from a soybean farm in Maryland, I now live and work in Washington, DC. At Viget, I lead digital engagements for clients like the Human Rights Campaign, Arcadia, and the NFL Players Association.</p>
+                <p><strong>Organic, farm-raised human.</strong> With an interactive journalism degree, and four years of experience leading cross-functional product teams, I bring my storytelling and engineering background to each new problem. I’m as comfortable discussing complex API integrations as I am editing impactful marketing copy. I’m a Certified Professional of Accessibility Core Competencies (CPACC) and I work every day to make the digital realm a more equitable place.</p>
+                <p>Originally from a soybean farm in Maryland, I now live and work in Washington, DC. At <a href="https://youneedabudget.com"><abbr title="You Need A Budget">YNAB</abbr></a>, I work to identify & understand the problems preventing people from loving how they spend their money – and lead a cross-functional product team to craft solutions to those problems.</p>
             </div>
 
             <div class="about-wrapper">
@@ -51,16 +51,16 @@
                 <p>I believe in doing good, and doing it well.</p>
 
                 <h3>Clear, transparent communication.</h3>
-                <p>When working with clients and internal teams, I tell the truth – and I expect the same of others. I sleep best after sending a well-worded email, GitHub issue, project plan, or meeting recap.</p>
+                <p>I tell the truth & tell it well – and I expect the same of others. I sleep best after sending a well-worded PRD, GitHub issue, or meeting recap.</p>
 
                 <h3>Hands-on collaboration.</h3>
-                <p>Product management isn’t just telling people what to do. Often, it’s doing the work alongside the team. In the last year, I've made <a href="https://github.com/peytonchance">677 GitHub contributions</a> (mostly tickets & simple PRs) and made countless design tweaks in <a href="https://figma.com">Figma</a>. I’m a digital generalist with a planning habit.</p>
+                <p>Product management isn’t just telling people what to do. Often, it’s doing the work alongside the team. In 2021, I made <a href="https://github.com/peytonchance">677 GitHub contributions</a> (mostly tickets & simple PRs) and made countless design tweaks in <a href="https://figma.com">Figma</a>. I’m a digital generalist with a planning habit.</p>
 
                 <h3>Digital accessibility.</h3>
-                <p>I believe that the digital world is for all people - including those with physical, mental and economic barriers to access. Accessibility is an equity challenge that can only be met with knowledge. I’m a Certified Professional of Accessibility Core Competencies (CPACC) and I’m working toward a certification as a Web Accessibility Specialist. At Viget, I lead accessibility QA to WCAG 2.1 standards, and advocate for testing across device tiers.</p>
+                <p>I believe that the digital world is for all people - including those with physical, mental and economic barriers to access. Accessibility is an equity challenge that can only be met with knowledge.</p>
 
                 <h3>LGBTQIA+ inclusion.</h3>
-                <p>I care about making the world a better place for LGBTQIA+ people to live and work. Together with queer colleagues, I've worked to increase the visibility of LGBTQIA+ people at Viget and even led a <a href="https://docs.google.com/presentation/d/1Iyqw1zAFRm2TT5Tww6_fonv4CSZtWSj_BZ-nDi_p8Y8/edit?usp=sharing" target="_blank">lunch discussion on queer identity</a>.</p>
+                <p>I care about making the world a better place for LGBTQIA+ people to live and work. Together with queer colleagues, I worked to increase the visibility of LGBTQIA+ people at Viget and even led a <a href="https://docs.google.com/presentation/d/1Iyqw1zAFRm2TT5Tww6_fonv4CSZtWSj_BZ-nDi_p8Y8/edit?usp=sharing" target="_blank">lunch discussion on queer identity</a>.</p>
             </div>
 
             <div class="about-wrapper">
@@ -71,8 +71,6 @@
                     <dd>peytonchance [at] gmail [dot] com</dd>
                     <dt><span role="img" aria-label="GitHub">&#128104;&#127995;&#8205;&#128187;</span> GitHub</dt>
                     <dd><a href="https://github.com/peytonchance" aria-label="Peyton Chance on GitHub">@peytonchance</a></dd>
-                    <dt><span role="img" aria-label="Twitter"></span>&#128038;</span> Twitter</dt>
-                    <dd><a href="https://twitter.com/peytonchance" aria-label="Peyton Chance on Twitter">@peytonchance</a></dd>
                     <dt><span role="img" aria-label="LinkedIn">&#128279;</span> LinkedIn</dt>
                     <dd><a href="https://linkedin.com/in/peytonchance" aria-label="Peyton Chance on LinkedIn">Peyton Chance</a></dd>
                 </dl>
